# Assignments

./: .multicolor.py.swp  README.md  multicolor.py  multitrackbar.py
igv/: CMakeLists.txt  package.xml
igv/scripts/: igvserial.py  time
igv/src/: driver.cpp  hsv
task1cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hsv.cpp  task1cpp
