<?xml version="1.0"?>
<package>
  <name>igv</name>
  <version>0.0.0</version>
  <description>The IGV package</description>
  <maintainer email="cyborg@gmail.com">Cyborg</maintainer>
  <license>BSD</license>
  <author email="cyborg@gmail.com">Cyborg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
</package>
